tests/ui/dyn-keyword/suggest-dyn-on-bare-trait-in-pat.stderr
error[E0782]: trait objects must include the `dyn` keyword
  --> $DIR/suggest-dyn-on-bare-trait-in-pat.rs:11:9
   |
LL |         Trait::CONST => {}
   |         ^^^^^
   |
help: add `dyn` keyword before this trait
   |
LL |         <dyn Trait>::CONST => {}
   |         ++++      +

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0782`.
